<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SFU Course Planner</string>

    <string name="title_program_requirements">Program Requirements</string>
    <string name="title_cs_major">Computing Science Major</string>
    <string name="subtitle_bsc">Bachelor of Science</string>

    <string name="link_spring_2026_calendar">LINK TO SPRING 2026 CALENDAR</string>
    <string name="program_requirements">Program Requirements</string>
    <string name="lower_division">Lower Division Requirements</string>
    <string name="upper_division">Upper Division Requirements</string>
    <string name="students_complete_all">Students complete all of</string>

    <string name="placeholder_course">Course</string>

    <string name="title_course_info_toolbar">CMPT362 - Spring 2026</string>

    <string name="placeholder_code_credits">CMPT362 (3)</string>
    <string name="placeholder_course_long_title">Mobile Applications Programming and Design</string>

    <string name="header_course_info">Course Info</string>
    <string name="header_prerequisites">Prerequisites</string>
    <string name="header_description">Description</string>

    <string name="placeholder_prereq_units">Completion of x units</string>
    <string name="placeholder_prereq_course">CMPT 225</string>
    <string name="placeholder_min_grade_note">(with a minimum grade of C-)</string>

    <string name="placeholder_description">
        Teaches students how to design and implement smartphone applications. Topics include development environment, phone emulator, key programming paradigms, UI design including views, fragments, and activities, data persistence, threads, services, embedded sensors, and location based services (e.g., Google Maps). Concepts are reinforced through programming assignments and group projects.
    </string>

    <string name="placeholder_prereq_course_with_grade">CMPT 225</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
