<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg">

    <include
        android:id="@+id/topAppBar"
        layout="@layout/layout_toolbar" />

    <!-- DEBUG BUTTONS -->
    <Button
        android:id="@+id/debug_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="debug_forward" />

    <Button
        android:id="@+id/debug_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="debug_back" />
    <!-- END DEBUG BUTTONS -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <!-- code +credit -->
            <TextView
                android:id="@+id/codeCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:text="@string/placeholder_code_credits" />

            <!-- course title -->
            <TextView
                android:id="@+id/longTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_course_long_title"
                android:paddingTop="2dp"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <!-- course Info header -->
            <TextView
                android:id="@+id/courseInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_course_info"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="6dp"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- prereq header -->
            <TextView
                android:id="@+id/prerequisitesHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_prerequisites"
                android:paddingTop="14dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurface" />

            <LinearLayout
                android:id="@+id/prereqContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp" />

            <!-- description header -->
            <TextView
                android:id="@+id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_description"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="6dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurface" />

            <!-- description text -->
            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
